# mittaridatapumppu-endpoint

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  azure-build-main.yml  azure-build-release.yml  docker-compose.yml  index.html  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
.github/workflows/: build-endpoint.yml  test-endpoint.yml
endpoint/: app.py  endpoint.py
endpoint/endpoints/: __init__.py
endpoint/endpoints/default/: apikeyauth.py
endpoint/endpoints/digita/: aiothingpark.py
endpoint/endpoints/sentilo/: cesva.py
endpoints/: __init__.py
endpoints/default/: apikeyauth.py
endpoints/digita/: aiothingpark.py
endpoints/sentilo/: cesva.py
tests/: endpoint_config  test_api2.py  test_api_cesva.py
