[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "endpoint/_version.py"

[tool.ruff]
line-length = 120
select = ["E", "F", "B", "Q"]

[project]
name = "mittaridatapumppu-endpoint"
description = "A FastAPI app that receives sensor data in POST requests and produces them to Kafka."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
  "fastapi",
  "fvhiot[kafka]@https://github.com/ForumViriumHelsinki/FVHIoT-python/releases/download/v1.0.1/FVHIoT-1.0.1-py3-none-any.whl",
  "httpx",
  "kafka-python",
  "python-multipart",
  "sentry-asgi",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "autoflake",
  "autopep8",
  "flake8",
  "gunicorn",
  "isort",
  "pep8-naming",
  "pre-commit",
  "pydantic",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]
test = [
    "pytest",
    "requests"
] #pip-compile --resolver=backtracking --extra test pyproject.toml
