[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "endpoint/_version.py"

[tool.ruff]
line-length = 120
select = ["E", "F", "B", "Q"]

[project]
name = "mittaridatapumppu-endpoint"
description = "A FastAPI app that receives sensor data in POST requests and produces them to Kafka."
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
  "fastapi ~= 0.105",
  "fvhiot[kafka]@https://github.com/ForumViriumHelsinki/FVHIoT-python/releases/download/v1.0.2/FVHIoT-1.0.2-py3-none-any.whl",
  "httpx ~= 0.25",
  "kafka-python ~= 2.0",
  "python-multipart ~= 0.0.6",
  "sentry-asgi ~= 0.2",
  "uvicorn ~= 0.24",
]

[project.optional-dependencies]
dev = [
  "autoflake",
  "autopep8",
  "flake8",
  "gunicorn",
  "isort",
  "pep8-naming",
  "pre-commit",
  "pydantic",
]
test = [
  "ruff",
  "pytest ~= 7.4",
  "requests",
  "pytest-asyncio",
  "pytest-cov",
]

[tool.pytest.ini_options]
log_cli = 1
log_cli_level = 20
testpaths = ["tests"]
addopts = ["--color=yes"]
